final edit for quote machine

--- a/front-end-libraries/random-quote-machine/style.css
+++ b/front-end-libraries/random-quote-machine/style.css
@@ -13,7 +13,7 @@ html, body {
 
 footer {
     padding-bottom: 5px;
-    position: sticky;
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
