--- a/responsive-web-design/product-landing-page/style.css
+++ b/responsive-web-design/product-landing-page/style.css
@@ -1,144 +1,130 @@
 body {
-  font-family: "Open Sans", sans-serif;
-  background-color: black;
-  color: white;
-  text-align: center;
-  background: url("https://i.fiery.me/6NcZ.jpg")
-    no-repeat center center fixed;
+    font-family: "Open Sans", sans-serif;
+    background-color: black;
+    color: white;
+    text-align: center;
+    background: url("https://i.fiery.me/6NcZ.jpg") no-repeat center center fixed;
 
-  background-size: cover;
+    background-size: cover;
 }
 
 @media only screen and (max-width: 600px) {
     header {
         background-color: black;
-      
     }
-     main {
-        font-szie: 10px;
-  }
+    main {
+        font-size: 10px;
+    }
 }
 
 #header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 
-  display: flex;
+    display: flex;
 
-  align-items: center;
-  #background-color: black;
-  height: 70px;
+    align-items: center;
+    /* background-color: black; */
+    height: 70px;
 }
 
 nav {
-  flex: 1;
-  list-style-type: none;
-  padding: 0px 0px 0px 10px;
+    flex: 1;
+    list-style-type: none;
+    padding: 0px 0px 0px 10px;
 }
 
 #navli {
-  float: left;
+    float: left;
 }
 
 li a {
-  
-  color: white;
-  padding: 15px;
-  text-decoration: none;
+    color: white;
+    padding: 15px;
+    text-decoration: none;
 }
 #title {
-  flex: 1;
- 
-  
+    flex: 1;
 }
 #header-img {
-  max-width: 300px;
-
-
+    max-width: 300px;
 }
-
-
 
 .container {
-  padding: 80px 10px 10px 10px;
+    padding: 80px 10px 10px 10px;
 }
 #features {
-  #padding: 120px 10px 10px 10px;
-  display: flex;
+    padding: 120px 10px 10px 10px;
+    display: flex;
 }
 #col {
-  flex: 1;
+    flex: 1;
 }
 
 #row {
-  display: flex;
-  text-align: center;
+    display: flex;
+    text-align: center;
 }
 #left {
-  flex: 1;
-  text-align: right;
-  #width: 48%;
-  padding: 5px;
+    flex: 1;
+    text-align: right;
+    width: 48%;
+    padding: 5px;
 }
 
 #right {
-  flex: 1;
-  text-align: left;
-  #width: 48%;
-  #vertical-align: middle;
-  padding: 5px;
+    flex: 1;
+    text-align: left;
+    width: 48%;
+    vertical-align: middle;
+    padding: 5px;
 }
 
 #submit {
-  padding: 5px;
-  border-radius: 5px;
-  margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 10px;
 }
 
 li {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 label {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 p {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 footer {
-  #background-color: ;
-  position: absolute;
-  right: 0;
-  left: 0;
-  padding: 5px;
+    /* #background-color: ; */
+    position: absolute;
+    right: 0;
+    left: 0;
+    padding: 5px;
 }
 
 #footer {
-  display: inline-block;
+    display: inline-block;
 }
 #download {
-  padding: 30px;
-  align-items: center;
-  #min-height: 55vh;
-  #padding-top: 45vh;
-  
-  
-} 
+    padding: 30px;
+    align-items: center;
+    min-height: 55vh;
+    padding-top: 45vh;
+}
 
 #vid {
-  
-  padding: 10px;
-  #display: flex;
-  #justify-content: center;
-  
+    padding: 10px;
+    display: flex;
+    justify-content: center;
 }
 iframe {
-   padding-top: 50px;
-   max-width: 1280px;
-   width: 100%;
-    
+    padding-top: 50px;
+    max-width: 1280px;
+    width: 100%;
 }
