--- a/responsive-web-design/tribute-page/style.css
+++ b/responsive-web-design/tribute-page/style.css
@@ -1,40 +1,38 @@
 body {
     font-family: VT323, Monospace;
     background-color: black;
-	  color: white;
-    text-align:center;
+    color: white;
+    text-align: center;
 }
 #title {
-  font-size: 60px;
+    font-size: 60px;
 }
 #subtitle {
-  color: grey;
+    color: grey;
 }
 #img-div {
-  margin: 50px;
+    margin: 50px;
 }
 #image {
-  max-width: 25%;
-  display: block;
-  height: auto;
-   
-  margin: auto;
+    max-width: 25%;
+    display: block;
+    height: auto;
+
+    margin: auto;
 }
 #img-caption {
-  color: grey;
+    color: grey;
 }
 
-.container {
-   #display: flex;
+/* .container {
+    display: flex;
 }
 .container div {
-   #flex: 1;
-   
-}
+    flex: 1;
+} */
 
 #tribute-info {
-  font-size: 20px;
-  max-width: 900px;
-  margin:0 auto;
-  
+    font-size: 20px;
+    max-width: 900px;
+    margin: 0 auto;
 }
