--- a/front-end-libraries/javascript-calculator/style.css
+++ b/front-end-libraries/javascript-calculator/style.css
@@ -1,21 +1,18 @@
-html, body {
+html,
+body {
     background-color: grey;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-
+    font-family: "Segoe UI";
+    font-weight: lighter;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-
 }
 
 #calculator {
-    /* min-height: 100vh; */
-    /* height: 500px; */
-    
-    width: 406px;
+    width: 400px;
     grid-template-areas: "disp disp disp disp" "modif modif modif oper" "digit digit digit oper" "digit digit digit oper" "digit digit digit oper" "digit digit digit oper";
     grid-auto-columns: 1fr;
 }
@@ -54,7 +51,6 @@ button {
     font-size: 2rem;
     border: 1px solid black;
     height: 100px;
-    
 }
 
 .modifiers button {
@@ -85,7 +81,7 @@ button {
 
 button:hover {
     opacity: 0.5;
-  }
+}
 
 /* 
 body {
