--- a/front-end-libraries/javascript-calculator/style.css
+++ b/front-end-libraries/javascript-calculator/style.css
@@ -36,7 +36,7 @@ body {
     grid-auto-columns: 1fr;
 }
 
-.operations {
+.operators {
     grid-area: oper;
 }
 
@@ -57,8 +57,7 @@ button {
     background-color: #ccc;
 }
 
-.operations button {
-    /* background-color: #F39737; */
+.operators button {
     background-color: orange;
     color: white;
 }
@@ -74,7 +73,7 @@ button {
     display: grid;
 }
 
-.digits .wide {
+.digits #zero {
     flex: 2 0 60%;
     order: 1;
 }
@@ -82,43 +81,3 @@ button {
 button:hover {
     opacity: 0.5;
 }
-
-/* 
-body {
-    background-color: #7f8c8d;
-    font-family: "Segoe UI", sans-serif;
-    margin: 0px;
-}
-
-html {}
-* {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-#app {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-#calculator {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding: 10px;
-    background-color: black;
-    grid-gap: 10px 10px;
-
-    
-}
-
-.grid-item {
-    background-color: grey;
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-} 
-*/
